completed initial layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <!-- icons -->
+  <script src="https://kit.fontawesome.com/c46414fcfd.js" crossorigin="anonymous"></script>
   <!-- favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico">
   <title>griffital | Design & Development</title>
@@ -21,20 +23,22 @@
       <h2>Designer &amp; Front End Developer</h2>
       <p>Accomplished creative professional with a proven track record of producing successful, result-driven solutions across print and digital media.</p>
     </div>
+
     <div class="container__btn">
-      <button class="container__btn--main"><a>Say hi<span class="container__btn--wave">&#128075;</span></a></button>
-      <button class="container__btn--main"><a href="/assets/Matt Griffiths CV.pdf" target="_blank"></a>Download CV</button>
+      <button class="container__btn--contact"><a href="mailto: matt@griffital.co.uk">Say hello<span class="container__btn--wave">👋🏻</span></a></button>
+      <button class="container__btn--cv"><a href="/assets/Matthew-Griffiths-CV.pdf" target="_blank">Download CV</a></button>
     </div>
+
     <div class="container__social">
       <ul>
-        <li class="container__social--icon">
-
+        <li>
+          <a class="social_logo" href="https://www.linkedin.com/in/mattgriffiths4" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
         </li>
-        <li class="container__social--icon">
-
+        <li>
+          <a class="social_logo" href="https://www.behance.net/griffital" target="_blank"><i class="fa-brands fa-behance"></i></a>
         </li>
-        <li class="container__social--icon">
-
+        <li>
+          <a class="social_logo" href="https://github.com/mattgriffiths4" target="_blank"><i class="fa-brands fa-github"></i></a>
         </li>
       </ul>
     </div>
